src/objects/UM_PhoneNumber__c.object
<CustomObject>
    <fields>
        <fullName>UM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Phone Numbers</relationshipLabel>
        <relationshipName>Phone_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_BillingStatus__c</fullName>
        <label>Billing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Active in Billing</fullName>
                    <default>true</default>
                    <label>Not Active in Billing</label>
                </value>
                <value>
                    <fullName>Active in Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_CDRIdNumber__c</fullName>
        <label>CDR Id Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_CallBarring__c</fullName>
        <label>Call Barring Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_CallIdentification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Identification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_DirectoryName__c</fullName>
        <label>Directory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_NumberRangeService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Number Range Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Phone Numbers</relationshipLabel>
        <relationshipName>Phone_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_PhoneNumber__c</fullName>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_ProductConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Phone Numbers</relationshipLabel>
        <relationshipName>Phone_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_ShowInDirectory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show In Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Provisioning</fullName>
                </value>
                <value>
                    <fullName>Porting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_Temporary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temporary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_VoiceService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voice Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Phone Numbers (Voice Service)</relationshipLabel>
        <relationshipName>Phone_Numbers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Phone Number</label>
    <nameField>
        <label>Phone Number Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phone Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>